# ChangeLog for app-emacs/yc
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/yc/ChangeLog,v 1.31 2009/06/06 15:44:02 ulm Exp $

  06 Jun 2009; Ulrich Mueller <ulm@gentoo.org> yc-4.0.13.ebuild:
  Fix elog message, bug 272899.

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> yc-4.0.13.ebuild:
  set explicit RDEPEND

  22 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -files/sample.dot.emacs,
  metadata.xml:
  Add to emacs herd, too. Remove unused file.

  07 Oct 2007; Ulrich Mueller <ulm@gentoo.org> yc-4.0.13.ebuild:
  Remove redundant virtual/emacs dependency. Quote FILESDIR variable.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> yc-4.0.13.ebuild:
  Replacing einfo with elog

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org> -yc-3.5.8.ebuild:
  clean up

  10 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.13.ebuild:
  Marked as stable.

*yc-4.0.13 (15 Aug 2004)

  15 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.11.ebuild,
  +yc-4.0.13.ebuild, -yc-4.0.8.ebuild:
  Version bumped.

*yc-4.0.11 (30 Jun 2004)

  30 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +yc-4.0.11.ebuild:
  Version bumped

  26 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.7.ebuild,
  yc-4.0.8.ebuild:
  Marked stable on x86 and alpha. Don't assign default to S

*yc-4.0.8 (17 Mar 2004)

  17 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.3.ebuild,
  yc-4.0.5.ebuild, yc-4.0.7.ebuild, yc-4.0.8.ebuild:
  Version bumped. Marked previous version stable on x86 and alpha.
  Removed old ebuilds.

*yc-4.0.7 (27 Feb 2004)

  27 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.7.ebuild:
  Version bumped

*yc-4.0.5 (08 Jan 2004)

  08 Jan 2004; <usata@gentoo.org> yc-4.0.3.ebuild, yc-4.0.5.ebuild:
  Version bumped.

  24 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> yc-4.0.0.ebuild,
  yc-4.0.1.ebuild, yc-4.0.2.ebuild, yc-4.0.3.ebuild:
  Marked as stable. Removed old ebuilds

*yc-4.0.3 (11 Dec 2003)
